--- a/examples/HelloWorlds/HelloWorld-MailExt-Popup/manifest.json
+++ b/examples/HelloWorlds/HelloWorld-MailExt-Popup/manifest.json
@@ -2,8 +2,11 @@
 	"manifest_version": 2,
 	"name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
-	"version": "0.0.1",
-	"author": "tb-dev",
+	"version": "0.0.3",
+	"author": "tb-dev2",
+	"developer": {
+		"name": "Christopher Leidigh, Storm"
+	},
 	"applications": {
 		"gecko": {
 			"id": "tb-helloworld-popup@tb.dev",
