adding dummy locales

--- a/examples/MailExtensions/WindowListener/manifest.json
+++ b/examples/MailExtensions/WindowListener/manifest.json
@@ -3,6 +3,7 @@
   "name": "windowListener@thunderStormExamples",
   "description": "Extension containing an experimental API that allows to register JavaScript function to window open and close events.",
   "version": "1",
+  "default_locale": "en_US",
   "applications": {
     "gecko": {
       "id": "windowListener@thunderStormExamples"
